Basic toolbox for B2G

--- a/b2g/chrome/content/shell.html
+++ b/b2g/chrome/content/shell.html
@@ -50,6 +50,9 @@
   <!-- manages DevTools server state -->
   <script type="application/javascript;version=1.8"
           src="chrome://b2g/content/devtools/debugger.js"> </script>
+  <!-- show DevTools toolbox if requested -->
+  <script type="application/javascript;version=1.8"
+          src="chrome://b2g/content/devtools/toolbox.js"> </script>
 </head>
   <body id="container">
 #ifdef FXOS_SIMULATOR
